; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_svc.c_bfa_lps_logout_comp_cb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_svc.c_bfa_lps_logout_comp_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_lps_s = type { i32, %struct.TYPE_2__*, i64 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @bfa_lps_logout_comp_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfa_lps_logout_comp_cb(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.bfa_lps_s*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.bfa_lps_s*
  store %struct.bfa_lps_s* %7, %struct.bfa_lps_s** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  br label %36

11:                                               ; preds = %2
  %12 = load %struct.bfa_lps_s*, %struct.bfa_lps_s** %5, align 8
  %13 = getelementptr inbounds %struct.bfa_lps_s, %struct.bfa_lps_s* %12, i32 0, i32 2
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %26

16:                                               ; preds = %11
  %17 = load %struct.bfa_lps_s*, %struct.bfa_lps_s** %5, align 8
  %18 = getelementptr inbounds %struct.bfa_lps_s, %struct.bfa_lps_s* %17, i32 0, i32 1
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.bfa_lps_s*, %struct.bfa_lps_s** %5, align 8
  %23 = getelementptr inbounds %struct.bfa_lps_s, %struct.bfa_lps_s* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @bfa_cb_lps_fdisclogo_comp(i32 %21, i32 %24)
  br label %36

26:                                               ; preds = %11
  %27 = load %struct.bfa_lps_s*, %struct.bfa_lps_s** %5, align 8
  %28 = getelementptr inbounds %struct.bfa_lps_s, %struct.bfa_lps_s* %27, i32 0, i32 1
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.bfa_lps_s*, %struct.bfa_lps_s** %5, align 8
  %33 = getelementptr inbounds %struct.bfa_lps_s, %struct.bfa_lps_s* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = call i32 @bfa_cb_lps_flogo_comp(i32 %31, i32 %34)
  br label %36

36:                                               ; preds = %10, %26, %16
  ret void
}

declare dso_local i32 @bfa_cb_lps_fdisclogo_comp(i32, i32) #1

declare dso_local i32 @bfa_cb_lps_flogo_comp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
